--- a/webviewer_html/css/chart.css
+++ b/webviewer_html/css/chart.css
@@ -77,7 +77,7 @@
 
 .stats_table {
 	font-family: "Helvetica";
-	font-size: medium;
+	font-size: small;
 	color: rgb(70,70,70);
     padding: 20px;
     width:100%;
